# kaappu-sdk

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
docs/: sdk_structure.md
sdks/core/: api-client.ts  package.json  tsconfig.json
sdks/core/src/: api-client.ts  index.ts  permissions.ts  storage.ts  token.ts  types.ts  webauthn.ts
sdks/go/: README.md  go.mod  kaappu.go  middleware.go  permissions.go  permissions_test.go
sdks/java/: pom.xml
sdks/java/src/main/java/com/kaappu/spring/: KaappuAutoConfiguration.java  KaappuProperties.java
sdks/java/src/main/java/com/kaappu/spring/security/: JwksJwtFilter.java  KaappuSecurityContext.java  PermissionInterceptor.java  RequirePermission.java
sdks/java/src/main/java/com/kaappu/spring/util/: PermissionChecker.java
sdks/java/src/test/java/com/kaappu/spring/security/: KaappuSecurityContextTest.java  PermissionInterceptorTest.java
sdks/next/: README.md  package.json  tsconfig.json  tsup.config.ts
sdks/next/src/: server.ts  types.ts  withAuth.ts
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/kaappu/: __init__.py  client.py  context.py  decorators.py  permissions.py
sdks/python/tests/: test_permissions.py
sdks/react/: README.md  package.json  tsup.config.ts  types.ts
sdks/react/components/: AccountView.tsx  LoginPanel.tsx
sdks/react/src/: index.ts  types.ts
sdks/react/src/components/: AccountView.tsx  Authorize.tsx  LoginPanel.tsx  ProfileBadge.tsx  RegisterPanel.tsx  styles.ts
sdks/react/src/context/: KaappuContext.ts  KaappuProvider.tsx
(+1 files in other folders)
